--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4376,32 +4376,26 @@ body {
   padding-bottom: 60px;
   background-image: url("../../../assets/images/jumbotron.jpg");
 }
-.cid-qJ51ECGnof {
+.cid-qJ9ZfnqFZI {
   padding-top: 90px;
   padding-bottom: 90px;
+  background-color: #f8f8f8;
 }
-.cid-qJ51ECGnof .mbr-section-subtitle {
+.cid-qJ9ZfnqFZI .mbr-section-subtitle {
   color: #767676;
   text-align: center;
   font-weight: 300;
 }
-.cid-qJ51ECGnof .timeline-text-content {
+.cid-qJ9ZfnqFZI .timeline-text-content {
   padding: 2rem 2.5rem;
-  background: #ffffff;
-  margin-left: 2rem;
+  background: #e7e7e7;
+  margin-right: 2rem;
+  transition: all .4s;
 }
-.cid-qJ51ECGnof .timeline-text-content p {
+.cid-qJ9ZfnqFZI .timeline-text-content p {
   margin-bottom: 0;
 }
-.cid-qJ51ECGnof .time-line-date-content {
-  margin-right: 2rem;
-}
-.cid-qJ51ECGnof .time-line-date-content p {
-  padding: 2rem 2.5rem;
-  background: #ffffff;
-  float: right;
-}
-.cid-qJ51ECGnof .timeline-element {
+.cid-qJ9ZfnqFZI .timeline-element {
   margin-bottom: 50px;
   position: relative;
   word-wrap: break-word;
@@ -4410,82 +4404,64 @@ body {
   flex-direction: row;
   -webkit-flex-direction: row;
 }
-.cid-qJ51ECGnof .timeline-element:hover .mbr-timeline-date {
+.cid-qJ9ZfnqFZI .timeline-element:hover .timeline-text-content {
   box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
   transition: all .4s;
 }
-.cid-qJ51ECGnof .timeline-element:hover .timeline-text-content {
-  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
-  transition: all .4s;
-}
-.cid-qJ51ECGnof .mbr-timeline-date,
-.cid-qJ51ECGnof .timeline-text-content {
-  transition: all .4s;
-}
-.cid-qJ51ECGnof .reverse {
+.cid-qJ9ZfnqFZI .reverse {
   flex-direction: row-reverse;
   -webkit-flex-direction: row-reverse;
 }
-.cid-qJ51ECGnof .reverse .timeline-text-content {
-  margin-right: 2rem;
-  margin-left: 0;
-}
-.cid-qJ51ECGnof .reverse .time-line-date-content {
+.cid-qJ9ZfnqFZI .reverse .timeline-text-content {
   margin-left: 2rem;
-  margin-right: 0rem;
+  margin-right: 0;
 }
-.cid-qJ51ECGnof .reverse .time-line-date-content p {
-  float: left;
-}
-.cid-qJ51ECGnof .iconBackground {
+.cid-qJ9ZfnqFZI .iconsBackground {
   position: absolute;
   left: 50%;
-  width: 20px;
-  height: 20px;
+  width: 60px;
+  height: 60px;
   line-height: 30px;
   text-align: center;
   border-radius: 50%;
-  font-size: 30px;
   display: inline-block;
-  background-color: #ffffff;
+  background-color: #e7e7e7;
   top: 20px;
-  margin-left: -10px;
+  margin-left: -30px;
 }
-.cid-qJ51ECGnof .separline:before {
+.cid-qJ9ZfnqFZI .mbr-iconfont {
+  position: absolute;
+  text-align: center;
+  font-size: 35px;
+  display: inline-block;
+  z-index: 3;
+  top: 13px;
+  left: 13px;
+}
+.cid-qJ9ZfnqFZI .separline:before {
   top: 20px;
   bottom: 0;
   position: absolute;
   content: "";
   width: 2px;
-  background-color: #ffffff;
+  background-color: #e7e7e7;
   left: calc(50% - 1px);
   height: calc(100% + 4rem);
 }
 @media (max-width: 768px) {
-  .cid-qJ51ECGnof .iconBackground {
-    left: 0 !important;
+  .cid-qJ9ZfnqFZI .iconsBackground {
+    left: 1.5rem;
   }
-  .cid-qJ51ECGnof .separline:before {
-    left: 0!important;
+  .cid-qJ9ZfnqFZI .separline:before {
+    left: calc(1.5rem - 1px);
   }
-  .cid-qJ51ECGnof .timeline-text-content {
-    margin-left: 0 !important;
-  }
-  .cid-qJ51ECGnof .time-line-date-content {
+  .cid-qJ9ZfnqFZI .timeline-text-content {
+    margin-left: 3rem !important;
     margin-right: 0 !important;
   }
-  .cid-qJ51ECGnof .time-line-date-content p {
-    float: left !important;
-  }
-  .cid-qJ51ECGnof .reverse .time-line-date-content {
-    margin-left: 0 !important;
-  }
-  .cid-qJ51ECGnof .reverse .timeline-text-content {
+  .cid-qJ9ZfnqFZI .reverse .timeline-text-content {
     margin-right: 0 !important;
   }
-}
-.cid-qJ51ECGnof P {
-  text-align: center;
 }
 .cid-qw1Q7680qB {
   padding-top: 30px;
@@ -5676,7 +5652,7 @@ body {
 .cid-qHPqBnrGRC {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/jumbotron3.jpg");
+  background-image: url("../../../assets/images/jumbotron2.jpg");
 }
 .cid-qHPqTwTpwE {
   padding-top: 30px;
@@ -6183,7 +6159,7 @@ body {
 .cid-qJ6Cs8aj11 {
   padding-top: 60px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/jumbotron3.jpg");
+  background-image: url("../../../assets/images/jumbotron2.jpg");
 }
 .cid-qJ6Cs9gStP {
   padding-top: 30px;
@@ -6342,5 +6318,574 @@ body {
   }
 }
 .cid-qJ6Csczi7r .media-container-row .row-copirayt {
+  word-break: break-word;
+}
+.cid-qvReov55SN .navbar {
+  padding: .5rem 0;
+  background: #19277f;
+  transition: none;
+  min-height: 77px;
+}
+.cid-qvReov55SN .navbar-dropdown.bg-color.transparent.opened {
+  background: #19277f;
+}
+.cid-qvReov55SN a {
+  font-style: normal;
+}
+.cid-qvReov55SN .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  top: -0.2em;
+  text-decoration: none;
+}
+.cid-qvReov55SN .nav-item a {
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+}
+.cid-qvReov55SN .btn {
+  padding: 0.4rem 1.5rem;
+  display: inline-flex;
+  align-items: center;
+}
+.cid-qvReov55SN .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-qvReov55SN .menu-logo {
+  margin-right: auto;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  align-items: center;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-qvReov55SN .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-qvReov55SN .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu {
+  background: #19277f;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qvReov55SN .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-qvReov55SN .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qvReov55SN .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-qvReov55SN .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-qvReov55SN .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-qvReov55SN button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-qvReov55SN button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qvReov55SN button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qvReov55SN nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qvReov55SN .collapsed.navbar-expand {
+  flex-direction: column;
+}
+.cid-qvReov55SN .collapsed .btn {
+  display: flex;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing,
+.cid-qvReov55SN .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-qvReov55SN .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-qvReov55SN .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-qvReov55SN .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-qvReov55SN .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-qvReov55SN .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-qvReov55SN .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-qvReov55SN .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-qvReov55SN .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-qvReov55SN .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 991px) {
+  .cid-qvReov55SN .navbar-expand {
+    flex-direction: column;
+  }
+  .cid-qvReov55SN img {
+    height: 3.8rem !important;
+  }
+  .cid-qvReov55SN .btn {
+    display: flex;
+  }
+  .cid-qvReov55SN button.navbar-toggler {
+    display: block;
+  }
+  .cid-qvReov55SN .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-qvReov55SN .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-qvReov55SN .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing,
+  .cid-qvReov55SN .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-nav,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-buttons,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-qvReov55SN .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-qvReov55SN .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-qvReov55SN .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-qvReov55SN .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-qvReov55SN .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-qvReov55SN .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-qvReov55SN .menu-logo {
+    flex-shrink: 0;
+  }
+}
+.cid-qJRfD9oIsx {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/airplane-silhouette-landing-2820x1870-104465-640x424.jpg");
+}
+.cid-qJRfFbXUwn {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qJRfFbXUwn .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qJRfFbXUwn .section-text {
+  padding: 2rem 0;
+}
+.cid-qJRfFbXUwn .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qJRfFbXUwn .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qJRfGPllAP {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qJRfGPllAP .mbr-text,
+.cid-qJRfGPllAP blockquote {
+  color: #767676;
+}
+.cid-qJRfGPllAP B {
+  color: #232323;
+}
+.cid-qJRoVX9ev9 {
+  padding-top: 60px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-qJRoVX9ev9 .counter-container {
+  color: #767676;
+}
+.cid-qJRoVX9ev9 .counter-container ul {
+  margin-bottom: 0;
+}
+.cid-qJRoVX9ev9 .counter-container ul li {
+  margin-bottom: 1rem;
+  list-style: none;
+}
+.cid-qJRoVX9ev9 .counter-container ul li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  padding-top: 3px;
+  content: '';
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 20px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #ff3366;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  content: '✓';
+}
+.cid-qJRoVX9ev9 .mbr-text UL {
+  color: #232323;
+}
+.cid-qJRrWpvTIH {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-qJRrWpvTIH .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-qJRrWpvTIH .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-qJRrWpvTIH .mbr-text {
+  color: #767676;
+}
+.cid-qJRrWpvTIH .mbr-text B {
+  color: #000000;
+}
+.cid-qJRwqKtLi3 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-qJRwqKtLi3 .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-qJRwqKtLi3 .section-text {
+  padding: 2rem 0;
+}
+.cid-qJRwqKtLi3 .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-qJRwqKtLi3 .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-qJRvYgTWX1 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qJRvYgTWX1 [class^="socicon-"]:before,
+.cid-qJRvYgTWX1 [class*=" socicon-"]:before {
+  line-height: 44px;
+}
+.cid-qJRvYgTWX1 .btn-social {
+  border-color: #149dcc;
+}
+.cid-qJRvYgTWX1 .btn-social:hover {
+  background: #149dcc;
+}
+.cid-qJRvYgTWX1 .btn-social:hover i.socicon {
+  color: #ffffff !important;
+}
+@media (max-width: 767px) {
+  .cid-qJRvYgTWX1 .btn {
+    font-size: 20px !important;
+  }
+}
+.cid-qw1Q7680qB {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #19277f;
+}
+.cid-qw1Q7680qB .media-container-row {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cid-qw1Q7680qB .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-bottom: 0;
+}
+.cid-qw1Q7680qB .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
+}
+.cid-qw1Q7680qB .media-container-row .foot-menu li p {
+  margin: 0;
+}
+.cid-qw1Q7680qB .media-container-row .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-qw1Q7680qB .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
+}
+.cid-qw1Q7680qB .media-container-row .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-qw1Q7680qB .media-container-row .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-qw1Q7680qB .media-container-row .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-qw1Q7680qB .media-container-row .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-qw1Q7680qB .media-container-row .row-copirayt {
   word-break: break-word;
 }
