--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1764,6 +1764,19 @@ body {
   word-wrap: break-word;
   word-break: break-word;
 }
+.cid-qwiFj6Io9F {
+  background-image: url("../../../assets/images/mbr-740x1080.jpg");
+}
+@media (min-width: 992px) {
+  .cid-qwiFj6Io9F .mbr-figure {
+    padding-left: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-qwiFj6Io9F .mbr-figure {
+    padding-top: 3rem;
+  }
+}
 .cid-qw1Pt4s8bi {
   padding-top: 15px;
   padding-bottom: 30px;
@@ -1812,38 +1825,10 @@ body {
 .cid-qw1Pt4s8bi .mbr-section-title {
   color: #ffffff;
 }
-.cid-qwiFj6Io9F {
-  background-image: url("../../../assets/images/mbr-740x1080.jpg");
-}
-@media (min-width: 992px) {
-  .cid-qwiFj6Io9F .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 991px) {
-  .cid-qwiFj6Io9F .mbr-figure {
-    padding-top: 3rem;
-  }
-}
-.cid-qwEeqytSzD {
-  padding-top: 45px;
-  padding-bottom: 30px;
-  background: linear-gradient(0deg, #ef7212, #ff7f9f);
-}
-.cid-qwEeqytSzD .mbr-iconfont-social {
-  font-size: 32px;
-  color: #ff3366;
-}
-.cid-qwEeqytSzD .social-list a:focus {
-  text-decoration: none;
-}
-.cid-qwEeqytSzD H2 {
-  color: #ffffff;
-}
 .cid-qvTbBSp4os {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #ffffff;
+  background-color: #cccccc;
 }
 .cid-qvTbBSp4os .mbr-slider .carousel-control {
   background: #1b1b1b;
@@ -1882,6 +1867,21 @@ body {
   background: linear-gradient(to left, rgba(85, 67, 70, 0.85), rgba(69, 80, 91, 0.85)) !important;
   -webkit-transition: 0.2s background ease-in-out;
   transition: 0.2s background ease-in-out;
+}
+.cid-qwEeqytSzD {
+  padding-top: 45px;
+  padding-bottom: 30px;
+  background: linear-gradient(0deg, #19277f, #55b4d4);
+}
+.cid-qwEeqytSzD .mbr-iconfont-social {
+  font-size: 32px;
+  color: #ff3366;
+}
+.cid-qwEeqytSzD .social-list a:focus {
+  text-decoration: none;
+}
+.cid-qwEeqytSzD H2 {
+  color: #ffffff;
 }
 .cid-qwj9hGIDFf {
   padding-top: 45px;
@@ -2167,6 +2167,12 @@ body {
 }
 .cid-qw1Q7680qB .media-container-row .row-copirayt {
   word-break: break-word;
+}
+#custom-html-3k {
+  /* Type valid CSS here */
+}
+#custom-html-3k .my-image {
+  width: 100%;
 }
 .cid-qCOP6PjyBA {
   padding-top: 90px;
@@ -4619,29 +4625,11 @@ body {
 }
 .cid-qHjJM68c3l SPAN {
   color: #ffffff;
+  text-align: left;
 }
-.cid-qHjSBfD9gk {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: #2e2e2e;
-}
-.cid-qHjSBfD9gk .line {
-  background-color: #ffffff;
-  color: #ffffff;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
-}
-.cid-qHjSBfD9gk .section-text {
-  padding: 2rem 0;
-}
-.cid-qHjSBfD9gk .inner-container {
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-qHjSBfD9gk .inner-container {
-    width: 100% !important;
-  }
+.cid-qHjJM68c3l .mbr-section-text,
+.cid-qHjJM68c3l .mbr-section-btn {
+  text-align: center;
 }
 .cid-qHjGxkdcAu {
   padding-top: 0px;
@@ -5697,7 +5685,7 @@ body {
 .cid-qHPqBnrGRC {
   padding-top: 60px;
   padding-bottom: 15px;
-  background-image: url("../../../assets/images/jumbotron0.jpg");
+  background-image: url("../../../assets/images/jumbotron2.jpg");
 }
 .cid-qHPqTwTpwE {
   padding-top: 30px;
@@ -6204,7 +6192,7 @@ body {
 .cid-qJ6Cs8aj11 {
   padding-top: 60px;
   padding-bottom: 30px;
-  background-image: url("../../../assets/images/jumbotron0.jpg");
+  background-image: url("../../../assets/images/jumbotron2.jpg");
 }
 .cid-qJ6Cs9gStP {
   padding-top: 30px;
